[gd_scene load_steps=44 format=3 uid="uid://bd26ndsjcc4v1"]

[ext_resource type="Script" uid="uid://bnkrvakxxrtym" path="res://Scripts/combate.gd" id="1_0is0q"]
[ext_resource type="Texture2D" uid="uid://b3oe8pc1877r8" path="res://Assets/ui medieval/combat_pvp.png" id="1_tj7jl"]
[ext_resource type="Texture2D" uid="uid://qsebd3jd24uo" path="res://Assets/ui medieval/antihero-healthbar/antihero-healthbar_Background.png" id="3_2gni0"]
[ext_resource type="Texture2D" uid="uid://bpo4qrfnpjdwm" path="res://Assets/ui medieval/antihero-healthbar/antihero-healthbar_Iconhearth Black.png" id="4_2gni0"]
[ext_resource type="Texture2D" uid="uid://cqe5injfl6be5" path="res://Assets/ui medieval/antihero-healthbar/antihero-healthbar_Health.png" id="5_nt11f"]
[ext_resource type="Texture2D" uid="uid://c3hlgqb4ib8d6" path="res://Assets/Jugador/Nueva carpeta/Download63905.png" id="6_nt11f"]
[ext_resource type="FontFile" uid="uid://bvg1keuxeda8m" path="res://Assets/determination-letter-game/determination.ttf" id="6_vlauw"]
[ext_resource type="Texture2D" uid="uid://dma8g51t06qtm" path="res://Assets/ui medieval/MediavelFree.png" id="7_rmhj1"]
[ext_resource type="Texture2D" uid="uid://cy3dvs6vg1pff" path="res://Assets/Jugador/Nueva carpeta/Download28528.png" id="7_vlauw"]
[ext_resource type="Texture2D" uid="uid://bwurcbs0vn55i" path="res://Assets/ui medieval/icon_32_2_09.png" id="8_yt22b"]
[ext_resource type="Texture2D" uid="uid://bttu38q5irnkn" path="res://Assets/Map/2 Objects/4 Box/1.png" id="9_yq7eb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nt11f"]
atlas = ExtResource("6_nt11f")
region = Rect2(0, 3584, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlauw"]
atlas = ExtResource("6_nt11f")
region = Rect2(128, 3584, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xobc4"]
atlas = ExtResource("6_nt11f")
region = Rect2(256, 3584, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j56wg"]
atlas = ExtResource("6_nt11f")
region = Rect2(384, 3584, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr7c4"]
atlas = ExtResource("6_nt11f")
region = Rect2(512, 3584, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxh2q"]
atlas = ExtResource("6_nt11f")
region = Rect2(640, 3584, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oicvu"]
atlas = ExtResource("6_nt11f")
region = Rect2(0, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oabv2"]
atlas = ExtResource("6_nt11f")
region = Rect2(128, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_olpif"]
atlas = ExtResource("6_nt11f")
region = Rect2(256, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nw2n"]
atlas = ExtResource("6_nt11f")
region = Rect2(384, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s0k1"]
atlas = ExtResource("6_nt11f")
region = Rect2(512, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1oh7l"]
atlas = ExtResource("6_nt11f")
region = Rect2(640, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcrdq"]
atlas = ExtResource("6_nt11f")
region = Rect2(768, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir6ja"]
atlas = ExtResource("6_nt11f")
region = Rect2(896, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_afy54"]
atlas = ExtResource("6_nt11f")
region = Rect2(1024, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd8h2"]
atlas = ExtResource("6_nt11f")
region = Rect2(1152, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwd8f"]
atlas = ExtResource("6_nt11f")
region = Rect2(1280, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5566h"]
atlas = ExtResource("6_nt11f")
region = Rect2(1408, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dkkh"]
atlas = ExtResource("6_nt11f")
region = Rect2(1536, 4096, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbv2e"]
atlas = ExtResource("6_nt11f")
region = Rect2(0, 4608, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l470p"]
atlas = ExtResource("6_nt11f")
region = Rect2(128, 4608, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbasu"]
atlas = ExtResource("6_nt11f")
region = Rect2(256, 4608, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj0ii"]
atlas = ExtResource("6_nt11f")
region = Rect2(384, 4608, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y65sf"]
atlas = ExtResource("6_nt11f")
region = Rect2(512, 4608, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pwx5"]
atlas = ExtResource("6_nt11f")
region = Rect2(640, 4608, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmhj1"]
atlas = ExtResource("6_nt11f")
region = Rect2(0, 2752, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt22b"]
atlas = ExtResource("6_nt11f")
region = Rect2(64, 2752, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2gni0"]
animations = [{
"frames": [{
"duration": 2.01,
"texture": SubResource("AtlasTexture_nt11f")
}, {
"duration": 0.51,
"texture": SubResource("AtlasTexture_vlauw")
}, {
"duration": 0.51,
"texture": SubResource("AtlasTexture_xobc4")
}, {
"duration": 0.51,
"texture": SubResource("AtlasTexture_j56wg")
}, {
"duration": 0.51,
"texture": SubResource("AtlasTexture_hr7c4")
}, {
"duration": 0.51,
"texture": SubResource("AtlasTexture_qxh2q")
}, {
"duration": 2.01,
"texture": SubResource("AtlasTexture_nt11f")
}],
"loop": false,
"name": &"atack_1",
"speed": 8.0
}, {
"frames": [{
"duration": 2.01,
"texture": SubResource("AtlasTexture_oicvu")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_oabv2")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_olpif")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_5nw2n")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_3s0k1")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_1oh7l")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_mcrdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir6ja")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_afy54")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_wd8h2")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_vwd8f")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_5566h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dkkh")
}],
"loop": false,
"name": &"atack_2",
"speed": 8.0
}, {
"frames": [{
"duration": 2.01,
"texture": SubResource("AtlasTexture_pbv2e")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_l470p")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_vbasu")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_tj0ii")
}, {
"duration": 0.61,
"texture": SubResource("AtlasTexture_y65sf")
}, {
"duration": 1.01,
"texture": SubResource("AtlasTexture_7pwx5")
}],
"loop": false,
"name": &"atack_3",
"speed": 8.0
}, {
"frames": [{
"duration": 2.01,
"texture": SubResource("AtlasTexture_rmhj1")
}, {
"duration": 2.01,
"texture": SubResource("AtlasTexture_yt22b")
}],
"loop": true,
"name": &"position_combat",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yq7eb"]
atlas = ExtResource("7_vlauw")
region = Rect2(0, 2880, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v41pc"]
atlas = ExtResource("7_vlauw")
region = Rect2(64, 2880, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_xobc4"]
animations = [{
"frames": [],
"loop": false,
"name": &"atack_1",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"atack_2",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"atack_3",
"speed": 5.0
}, {
"frames": [{
"duration": 2.01,
"texture": SubResource("AtlasTexture_yq7eb")
}, {
"duration": 2.01,
"texture": SubResource("AtlasTexture_v41pc")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_uhsiu"]
atlas = ExtResource("7_rmhj1")
region = Rect2(242, 1, 12, 29)

[node name="Combate" type="Node2D"]
script = ExtResource("1_0is0q")

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(632, 360)
scale = Vector2(0.54, 0.5333333)
texture = ExtResource("1_tj7jl")

[node name="player" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="player"]
position = Vector2(968, 376)
scale = Vector2(4, 4.098)
sprite_frames = SubResource("SpriteFrames_2gni0")
animation = &"atack_2"
autoplay = "position_combat"
frame = 12
frame_progress = 1.0

[node name="BarraVidaJugador" type="TextureProgressBar" parent="player"]
clip_contents = true
offset_left = 840.0
offset_top = 127.99999
offset_right = 888.8716
offset_bottom = 145.50436
scale = Vector2(7, 7)
value = 1.0
nine_patch_stretch = true
texture_under = ExtResource("3_2gni0")
texture_over = ExtResource("4_2gni0")
texture_progress = ExtResource("5_nt11f")
tint_progress = Color(0.9098039, 0, 0, 1)

[node name="Label" type="Label" parent="player"]
offset_left = 960.0
offset_top = 544.0
offset_right = 1042.0
offset_bottom = 582.0
theme_override_colors/font_color = Color(0.9372549, 0.72156864, 0.0627451, 1)
theme_override_colors/font_shadow_color = Color(0.4083453, 0.4083453, 0.4083453, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vlauw")
theme_override_font_sizes/font_size = 28
text = "ZYORA"
horizontal_alignment = 1

[node name="enemy" type="Node2D" parent="."]

[node name="animacion" type="AnimatedSprite2D" parent="enemy"]
position = Vector2(344, 384)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_xobc4")
autoplay = "default"

[node name="BarraVidaEnemy" type="TextureProgressBar" parent="enemy"]
texture_filter = 1
offset_left = 160.00002
offset_top = 136.0
offset_right = 209.61281
offset_bottom = 156.0
scale = Vector2(7, 5.68)
max_value = 0.0
nine_patch_stretch = true
texture_under = ExtResource("3_2gni0")
texture_over = ExtResource("4_2gni0")
texture_progress = ExtResource("5_nt11f")
tint_progress = Color(0.9098039, 0, 0, 1)

[node name="Label2" type="Label" parent="enemy"]
offset_left = 232.0
offset_top = 552.0
offset_right = 419.0
offset_bottom = 590.0
theme_override_colors/font_color = Color(0.9372549, 0.72156864, 0.0627451, 1)
theme_override_colors/font_shadow_color = Color(0.4083453, 0.4083453, 0.4083453, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_vlauw")
theme_override_font_sizes/font_size = 28
text = "KNIGH SILVER"
horizontal_alignment = 1

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Atacar" type="Button" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 304.00003
offset_top = 600.0
offset_right = 436.27762
offset_bottom = 668.14
scale = Vector2(1.693407, 1.056648)
theme_override_fonts/font = ExtResource("6_vlauw")
theme_override_font_sizes/font_size = 29
text = "ATACAR"
icon = SubResource("AtlasTexture_uhsiu")

[node name="Objeto" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 560.00006
offset_top = 608.0
offset_right = 721.2482
offset_bottom = 670.5708
scale = Vector2(1.3395499, 1.0228417)
theme_override_fonts/font = ExtResource("6_vlauw")
theme_override_font_sizes/font_size = 28
disabled = true
text = "OBJETO"
icon = ExtResource("8_yt22b")

[node name="Huir" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 823.99994
offset_top = 608.0
offset_right = 935.8022
offset_bottom = 662.47076
scale = Vector2(1.2879889, 1.1749419)
theme_override_fonts/font = ExtResource("6_vlauw")
theme_override_font_sizes/font_size = 28
text = "HUIR"
icon = ExtResource("9_yq7eb")

[node name="Texto_accion" type="Label" parent="."]
texture_filter = 1
offset_left = 344.0
offset_top = 79.99999
offset_right = 667.5452
offset_bottom = 103.00001
scale = Vector2(1.9780858, 2.2754028)
theme_override_colors/font_shadow_color = Color(1.0609317, 0.9077833, 0, 0.003921569)
theme_override_fonts/font = ExtResource("6_vlauw")
horizontal_alignment = 1

[connection signal="pressed" from="Panel/Huir" to="." method="_on_huir_pressed"]
